--- a/oidclib/src/main/AndroidManifest.xml
+++ b/oidclib/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lnikkila.oidc">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.lnikkila.oidc">
 
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -7,8 +8,6 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.OidcLib">
-    </application>
+        android:label="@string/app_name"></application>
 
 </manifest>
